# cm30225

./: .gitignore  CMakeLists.txt  README.md  avg.m  batch_run.py  compare_results.m  frieden.c  hkr33_distributed_memory.c  hkr33_sequential.c  hkr33_shared_memory.c  hkr33_shared_memory_sequential.c  hkr33_shared_memory_sequential.m  hkr33_shared_memory_sequential_matlab.m  result_analysis.m  wikipediea.c
inc/: hkr33_shared_memory.h
matlab/: compare_results.m  correctness.m  efficiency.m  efficiency_again.m  plot_res.m  precision.m  relaxation.m  result_analysis.m  variable_problem_size.m
